# glasspane

./: .gitignore  .vercelignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
crates/gp-core/: Cargo.toml
crates/gp-core/src/: lib.rs
crates/gp-issuer/: Cargo.toml
crates/gp-issuer/src/: main.rs
crates/gp-keygen/: Cargo.toml
crates/gp-keygen/src/: main.rs
crates/gp-room/: Cargo.toml
crates/gp-room/src/: main.rs
crates/gp-types/: Cargo.toml  README.md
crates/gp-types/src/: lib.rs
crates/gp-verifier/: Cargo.toml
crates/gp-verifier/src/: main.rs
crates/gp-wasm/: Cargo.toml
crates/gp-wasm/src/: lib.rs
docs/: publish-a-feedback-bounty.md  run-a-real-receipt.md
examples/: README.md  mainnet-tx.hex
examples/rooms/glasspane-bounties/: payouts.csv  room.json  verified-room.json
examples/rooms/glasspane-bounties/raw/: community-support-01.hex
examples/rooms/glasspane-bounties/receipts/: community-support-01.json
examples/rooms/zechub-demo/: room.json  verified-room.json
examples/rooms/zechub-demo/receipts/: mainnet-receipt-tampered.json
scripts/: fetch-zcash-raw-tx.sh  publish-bounty-receipt.mjs
spec/: 24h-gate.md  receipt.md  room.md
tests/: publish-support-receipt.test.mjs  web-room-builder.test.mjs
web/: .vercelignore  app.css  audit.html  boundary.html  index.html  receipt.html  vercel.json
web/api/: raw-tx.js
web/room/: create-logic.mjs  create.html  create.js  demo-receipt.json  glasspane-bounties.html  glasspane-bounties.json  glasspane-support.json  support-receipt.json  zechub-demo.html
web/wasm/: gp_wasm.d.ts  gp_wasm.js  gp_wasm_bg.wasm  gp_wasm_bg.wasm.d.ts
