[workspace]
resolver = "2"
members = [
    "crates/gp-types",
    "crates/gp-core",
    "crates/gp-issuer",
    "crates/gp-verifier",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dolepee/glasspane"

[workspace.dependencies]
# Cryptography + protocol. Pinned to published-on-crates.io versions
# (orchard 0.13.1 uses zcash_note_encryption 0.4, not the 0.5 on main).
orchard = "=0.13.1"
zcash_note_encryption = "0.4"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"

# Errors + util
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
