[workspace]
resolver = "2"
members = [
    "crates/gp-types",
    "crates/gp-core",
    "crates/gp-issuer",
    "crates/gp-verifier",
    "crates/gp-keygen",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dolepee/glasspane"

[workspace.dependencies]
# Cryptography + Zcash protocol (versions pinned to a self-consistent
# published set on crates.io).
orchard = "=0.13.1"
zcash_note_encryption = "0.4"
zcash_primitives = "0.27"
zcash_protocol = "0.8"
zcash_client_backend = { version = "0.22", default-features = false, features = ["lightwalletd-tonic", "orchard"] }
sapling-crypto = "0.7"
zcash_address = "0.11"
ed25519-dalek = "2"

# Async networking for the lightwalletd gRPC client.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
prost = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"

# Errors + util
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Test helpers
rand = "0.8"
rand_core = "0.6"
