[workspace]
resolver = "2"
members = [
    "crates/gp-types",
    "crates/gp-core",
    "crates/gp-issuer",
    "crates/gp-verifier",
    "crates/gp-keygen",
    "crates/gp-room",
    "crates/gp-wasm",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dolepee/glasspane"

[workspace.dependencies]
# Cryptography + Zcash protocol (versions pinned to a self-consistent
# published set on crates.io).
orchard = { version = "=0.15.0", default-features = false }
zcash_note_encryption = "0.4"
zcash_primitives = { version = "0.29", default-features = false }
zcash_protocol = { version = "0.10", default-features = false }
zcash_client_backend = { version = "0.23", default-features = false, features = ["lightwalletd-tonic", "orchard"] }
sapling-crypto = { version = "0.7", default-features = false }
zcash_address = { version = "0.13", default-features = false }
ed25519-dalek = "2"

# Async networking for the lightwalletd gRPC client.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
prost = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
wasm-bindgen = "0.2"

# Errors + util
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Test helpers
rand = "0.8"
rand_core = "0.6"
