[package]
name = "gp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Glasspane core verification: OCK based selective disclosure of Zcash outputs"

[dependencies]
gp-types = { path = "../gp-types" }
orchard = { workspace = true }
sapling-crypto = { workspace = true }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
