[package]
name = "gp-issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Glasspane receipt issuer (sender side)"

[[bin]]
name = "gp-issue"
path = "src/main.rs"

[dependencies]
gp-types = { path = "../gp-types" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
