[package]
name = "gp-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Glasspane receipt verifier"

[[bin]]
name = "gp-verify"
path = "src/main.rs"

[dependencies]
gp-types = { path = "../gp-types" }
gp-core = { path = "../gp-core" }

# Zcash protocol
orchard = { workspace = true }
sapling-crypto = { workspace = true }
zcash_address = { workspace = true, features = ["std"] }
zcash_primitives = { workspace = true, features = ["std", "circuits", "multicore"] }
zcash_protocol = { workspace = true, features = ["std"] }
zcash_client_backend = { workspace = true }
zcash_note_encryption = { workspace = true }

# Async + RPC
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

# CLI + util
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
